- `gui/unit-info-viewer`: shows a unit's relative size to its race's average.
- `caravan`: optional overlay to hide vanilla bring trade goods to depot button (if you prefer to always use the DFHack version and don't want to accidentally click on the vanilla button). enable ``caravan.movegoods_hider`` in `gui/control-panel` UI Overlays tab to use.
- `gui/design`: significant redesign of UI for much improved usability
- `gui/unit-info-viewer`: add precise unit size in cc (cubic centimeters) for comparison against the wiki values
- `gui/quickfort`: delete blueprints from the blueprint load dialog
- `quickfort`: new ``delete`` command for deleting player-owned blueprints (library and mod-added blueprints cannot be deleted)
- `gui/launcher`: refresh default tag filter when mortal mode is toggled in `gui/control-panel` so changes to which tools autocomplete take effect immediately
- `gui/civ-alert`: you can now register multiple burrows as civilian alert safe spaces

## Removed
- `max-wave`: merged into `pop-control`
- `devel/find-offsets`, `devel/find-twbt`, `devel/prepare-save`: remove development scripts that are no longer useful
- `fix/item-occupancy`, `fix/tile-occupancy`: merged into `fix/occupancy`

# 50.13-r2

## New Tools
- Updated for adventure mode: `gui/sandbox`, `gui/create-item`, `gui/reveal`
- `ghostly`: (reinstated) allow your adventurer to phase through walls
- `markdown`: (reinstated) export description of selected unit or item to a text file
- `adaptation`: (reinstated) inspect or set unit cave adaptation levels
- `fix/engravings`: fix corrupt engraving tiles
- `unretire-anyone`: (reinstated) choose anybody in the world as an adventurer
- `reveal-adv-map`: (reinstated) reveal (or hide) the adventure map
- `resurrect-adv`: (reinstated) allow your adventurer to recover from death
- `flashstep`: (reinstated) teleport your adventurer to the mouse cursor

## New Features