@@ -54,6 +54,7 @@ Template for new versions:
 - `gui/unit-info-viewer`: now displays a unit's weight, relative to either dwarves, elephants or cats
 - `gui/unit-info-viewer`: shows a unit's relative size to its race's average.
 - `caravan`: optional overlay to hide vanilla bring trade goods to depot button (if you prefer to always use the DFHack version and don't want to accidentally click on the vanilla button). enable ``caravan.movegoods_hider`` in `gui/control-panel` UI Overlays tab to use.
+- `caravan`: bring goods to depot screen now shows (approximate) distance from item to depot
 - `gui/design`: significant redesign of UI for much improved usability
 - `gui/unit-info-viewer`: add precise unit size in cc (cubic centimeters) for comparison against the wiki values
 - `gui/quickfort`: delete blueprints from the blueprint load dialog
